--- a/MiSTer_SAM.ini
+++ b/MiSTer_SAM.ini
@@ -13,6 +13,9 @@
 # Adjust if you don't use SD card for your files
 mrsamhome="/media/fat/MiSTer_SAM"
 
+# Time before Super Attract Mode starts in minutes
+samtimeout=10
+
 # Which systems would you like to display in Attract Mode? 
 # Valid options: arcade gba genesis megacd neogeo nes snes tgfx16 tgfx16cd
 corelist="arcade,gba,genesis,megacd,neogeo,nes,snes,tgfx16,tgfx16cd"
