--- a/MiSTer_SAM.ini
+++ b/MiSTer_SAM.ini
@@ -11,21 +11,22 @@
 
 # ======== GENERAL OPTIONS ========
 # Adjust if you don't use SD card for your files
-mrsamhome="/media/fat/MiSTer_SAM"
+mrsampath="/media/fat/MiSTer_SAM"
+misterpath="/media/fat"
 
 # Time before Super Attract Mode starts in minutes
 samtimeout=10
+
+# Time before going to the next core
+timer=120
 
 # Which systems would you like to display in Attract Mode? 
 # Valid options: arcade gba genesis megacd neogeo nes snes tgfx16 tgfx16cd
 corelist="arcade,gba,genesis,megacd,neogeo,nes,snes,tgfx16,tgfx16cd"
 
-# Time before going to the next core
-timer=120
-
 # Path to tools. Change if you have another copy installed and want to share.
-mbcpath="${mrsamhome}/mbc"
-partunpath="${mrsamhome}/partun"
+mbcpath="/media/fat/MiSTer_SAM/mbc"
+partunpath="/media/fat/MiSTer_SAM/partun"
 
 # ======== CONSOLE OPTIONS ========
 # If you don't want Attract Mode to use the ZIP files in your game directories for some reason set this to "Yes"
@@ -39,8 +40,8 @@ mrapath="/media/fat/_Arcade"
 
 # The following two Directories are for your horizontal and vertical games - requires Arcade Organizer Script
 # You can also set the vertical Games to "_Vertical CCW 90 Deg" for Games that are rotated Counter Clockwise
-mrapathvert="${pathfs}/_Arcade/_Organized/_6 Rotation/_Vertical CW 90 Deg" 
-mrapathhoriz="${pathfs}/_Arcade/_Organized/_6 Rotation/_Horizontal"
+mrapathvert="/media/fat/_Arcade/_Organized/_6 Rotation/_Vertical CW 90 Deg" 
+mrapathhoriz="/media/fat/_Arcade/_Organized/_6 Rotation/_Horizontal"
 
 # Which games you want to display? - Set it to Horizontal, Vertical or All
 orientation=All
