--- a/MiSTer_SAM.ini
+++ b/MiSTer_SAM.ini
@@ -32,7 +32,7 @@ partunpath="/media/fat/MiSTer_SAM/partun"
 # If you don't want Attract Mode to use the ZIP files in your game directories for some reason set this to "Yes"
 ignorezip="No"
 
-# If you want to disable bootroms for faster loading
+# Disable bootroms directory so your default games don't boot during Attract Mode cycles 
 disablebootrom="Yes"
 
 # ======== ARCADE OPTIONS ========
