Moved default data dir, added core paths to ini

--- a/MiSTer_SAM.ini
+++ b/MiSTer_SAM.ini
@@ -11,40 +11,56 @@
 
 # ======== GENERAL OPTIONS ========
 # Adjust if you don't use SD card for your files
-mrsampath="/media/fat/MiSTer_SAM"
-misterpath="/media/fat"
+#mrsampath="/media/fat/Scripts/.MiSTer_SAM"
+#misterpath="/media/fat"
 
 # Time before Super Attract Mode starts in minutes
-samtimeout=5
+#samtimeout=5
 
 # Time before going to the next core
-timer=120
+#timer=120
 
 # Which systems would you like to display in Attract Mode? 
 # Valid options: arcade gba genesis megacd neogeo nes snes tgfx16 tgfx16cd
-corelist="arcade,gba,genesis,megacd,neogeo,nes,snes,tgfx16,tgfx16cd"
+#corelist="arcade,gba,genesis,megacd,neogeo,nes,snes,tgfx16,tgfx16cd"
 
 # Path to tools. Change if you have another copy installed and want to share.
-mbcpath="/media/fat/MiSTer_SAM/mbc"
-partunpath="/media/fat/MiSTer_SAM/partun"
+#mbcpath="/media/fat/MiSTer_SAM/mbc"
+#partunpath="/media/fat/MiSTer_SAM/partun"
+
+
+# ======== GAME PATHS ========
+# Customize the path to ROMs for each core here
+# If you want to use usb0 or a different directory - this is for you!
+#arcadepath="/media/fat/_arcade"
+#gbapath="/media/fat/games/GBA"
+#genesispath="/media/fat/games/Genesis"
+#megacdpath="/media/fat/games/MegaCD"
+#neogeopath="/media/fat/games/NeoGeo"
+#nespath="/media/fat/games/NES"
+#snespath="/media/fat/games/SNES"
+#tgfx16path="/media/fat/games/TGFX16"
+#tgfx16cdpath="/media/fat/games/TGFX16-CD"
+
 
 # ======== CONSOLE OPTIONS ========
 # If you don't want Attract Mode to use the ZIP files in your game directories for some reason set this to "Yes"
-ignorezip="No"
+#ignorezip="No"
 
 # Disable bootroms directory so your default games don't boot during Attract Mode cycles 
-disablebootrom="Yes"
+#disablebootrom="Yes"
+
 
 # ======== ARCADE OPTIONS ========
-mrapath="/media/fat/_Arcade"
+#mrapath="/media/fat/_Arcade"
 
 # The following two Directories are for your horizontal and vertical games - requires Arcade Organizer Script
 # You can also set the vertical Games to "_Vertical CCW 90 Deg" for Games that are rotated Counter Clockwise
-mrapathvert="/media/fat/_Arcade/_Organized/_6 Rotation/_Vertical CW 90 Deg" 
-mrapathhoriz="/media/fat/_Arcade/_Organized/_6 Rotation/_Horizontal"
+#mrapathvert="/media/fat/_Arcade/_Organized/_6 Rotation/_Vertical CW 90 Deg" 
+#mrapathhoriz="/media/fat/_Arcade/_Organized/_6 Rotation/_Horizontal"
 
 # Which games you want to display? - Set it to Horizontal, Vertical or All
-orientation=All
+#orientation=All
 
 # List of MRAs. If no list is found, the script will create a new list on startup
 #mralist="/media/fat/Scripts/MiSTer_SAM_mras.txt"
