--- a/MiSTer_SAM.ini
+++ b/MiSTer_SAM.ini
@@ -15,10 +15,10 @@
 #misterpath="/media/fat"
 
 # Time before Super Attract Mode starts in minutes
-#samtimeout=5
+samtimeout=5
 
 # Time before going to the next core
-#timer=120
+timer=120
 
 # Which systems would you like to display in Attract Mode? 
 # Valid options: arcade gba genesis megacd neogeo nes snes tgfx16 tgfx16cd
