--- a/MiSTer_SAM.ini
+++ b/MiSTer_SAM.ini
@@ -25,8 +25,8 @@ timer=120
 #corelist="arcade,gba,genesis,megacd,neogeo,nes,snes,tgfx16,tgfx16cd"
 
 # Path to tools. Change if you have another copy installed and want to share.
-#mbcpath="/media/fat/MiSTer_SAM/mbc"
-#partunpath="/media/fat/MiSTer_SAM/partun"
+#mbcpath="/media/fat/Scripts/.MiSTer_SAM/mbc"
+#partunpath="/media/fat/Scripts/.MiSTer_SAM/partun"
 
 
 # ======== GAME PATHS ========
