--- a/MiSTer_SAM.ini
+++ b/MiSTer_SAM.ini
@@ -34,7 +34,7 @@ saminterrupt="Yes"
 # Valid options: arcade gba genesis megacd neogeo nes snes tgfx16 tgfx16cd
 #corelist="arcade,gba,genesis,megacd,neogeo,nes,snes,tgfx16,tgfx16cd"
 
-# Path to tools. Change if you have another copy installed and want to share.
+# Path to tools. Change if you have another copy installed and want to reuse.
 #mbcpath="/media/fat/Scripts/.MiSTer_SAM/mbc"
 #partunpath="/media/fat/Scripts/.MiSTer_SAM/partun"
 
