--- a/MiSTer_SAM.ini
+++ b/MiSTer_SAM.ini
@@ -28,7 +28,7 @@ gamegametimer=120
 # SAM tries to listen for controller buttons, controller d-pad movement, mouse movement, mouse buttons, and keyboard input
 # SAM attempts to detect newly added controllers and mice for monitoring
 # Not all devices appear to Linux - notably BlisSTer controllers in LLAPI mode and SNAC devices	
-saminterrupt="Yes"
+#saminterrupt="Yes"
 
 # Which systems would you like to display in Attract Mode? 
 # Valid options: arcade gba genesis megacd neogeo nes snes tgfx16 tgfx16cd
