--- a/MiSTer_SAM.ini
+++ b/MiSTer_SAM.ini
@@ -5,38 +5,27 @@
 # The script supports zipped Everdrive packs or unzipped folders.
 # For MegaCD and Turbografx16 CD your games need to be in CHD format.
 
-# /media/usb is not well tested yet
-# In particular NTFS formatted drives may casue issues due to NTFS being case-sensitive on MiSTer
-
-
 # ======== GENERAL OPTIONS ========
-# Adjust if you don't use SD card for your files
-#mrsampath="/media/fat/Scripts/.MiSTer_SAM"
-#misterpath="/media/fat"
 
 # Time before Super Attract Mode starts in seconds
 # 300 = 5 minutes, 600 = 10 minutes, 900 = 15 minutes
-samtimeout=300
+samtimeout=20
 
 # Time before going to the next core in seconds
-gamegametimer=120
+gamegametimer=15
 
 # Start SAM only from MiSTer main menu
-#menuonly="Yes"
+menuonly="No"
 
 # Interrupt attract mode on input
 # SAM tries to listen for controller buttons, controller d-pad movement, mouse movement, mouse buttons, and keyboard input
 # SAM attempts to detect newly added controllers and mice for monitoring
 # Not all devices appear to Linux - notably BlisSTer controllers in LLAPI mode and SNAC devices	
-#saminterrupt="Yes"
+saminterrupt="Yes"
 
 # Which systems would you like to display in Attract Mode? 
 # Valid options: arcade gba genesis megacd neogeo nes snes tgfx16 tgfx16cd
-#corelist="arcade,gba,genesis,megacd,neogeo,nes,snes,tgfx16,tgfx16cd"
-
-# Path to tools. Change if you have another copy installed and want to reuse.
-#mbcpath="/media/fat/Scripts/.MiSTer_SAM/mbc"
-#partunpath="/media/fat/Scripts/.MiSTer_SAM/partun"
+corelist="arcade,gba,genesis,megacd,neogeo,nes,snes,tgfx16,tgfx16cd"
 
 
 # ======== GAME PATHS ========
@@ -80,3 +69,12 @@ mraexclude="
 Example Bad Game.mra
 Another Bad Game.mra
 "
+
+# ======== OTHER ========
+# Path to tools. Change if you have another copy installed and want to reuse.
+#mbcpath="/media/fat/Scripts/.MiSTer_SAM/mbc"
+#partunpath="/media/fat/Scripts/.MiSTer_SAM/partun"
+
+# This will probably break things if you try to adjust the following settings
+#mrsampath="/media/fat/Scripts/.MiSTer_SAM"
+#misterpath="/media/fat"
