--- a/MiSTer_SAM.ini
+++ b/MiSTer_SAM.ini
@@ -27,7 +27,6 @@ saminterrupt="Yes"
 # Valid options: arcade gba genesis megacd neogeo nes snes tgfx16 tgfx16cd
 corelist="arcade,gba,genesis,megacd,neogeo,nes,snes,tgfx16,tgfx16cd"
 
-
 # ======== GAME PATHS ========
 # Customize the path to ROMs for each core here
 # If you want to use usb0 or a different directory - this is for you!
@@ -44,22 +43,16 @@ corelist="arcade,gba,genesis,megacd,neogeo,nes,snes,tgfx16,tgfx16cd"
 
 # ======== CONSOLE OPTIONS ========
 # If you don't want Attract Mode to use the ZIP files in your game directories for some reason set this to "Yes"
-#ignorezip="No"
+ignorezip="No"
 
 # Disable bootroms directory so your default games don't boot during Attract Mode cycles 
-#disablebootrom="Yes"
-
+disablebootrom="Yes"
 
 # ======== ARCADE OPTIONS ========
 #mrapath="/media/fat/_Arcade"
 
-# The following two Directories are for your horizontal and vertical games - requires Arcade Organizer Script
-# You can also set the vertical Games to "_Vertical CCW 90 Deg" for Games that are rotated Counter Clockwise
-#mrapathvert="/media/fat/_Arcade/_Organized/_6 Rotation/_Vertical CW 90 Deg" 
-#mrapathhoriz="/media/fat/_Arcade/_Organized/_6 Rotation/_Horizontal"
-
 # Which games you want to display? - Set it to Horizontal, Vertical or All
-#orientation=All
+orientation=All
 
 # List of MRAs. If no list is found, the script will create a new list on startup
 #mralist="/media/fat/Scripts/MiSTer_SAM_mras.txt"
@@ -78,3 +71,8 @@ Another Bad Game.mra
 # This will probably break things if you try to adjust the following settings
 #mrsampath="/media/fat/Scripts/.MiSTer_SAM"
 #misterpath="/media/fat"
+
+# The following two Directories are for your horizontal and vertical Arcade games - requires Arcade Organizer Script
+# You can also set the vertical Games to "_Vertical CCW 90 Deg" for Games that are rotated Counter Clockwise
+#mrapathvert="/media/fat/_Arcade/_Organized/_6 Rotation/_Vertical CW 90 Deg" 
+#mrapathhoriz="/media/fat/_Arcade/_Organized/_6 Rotation/_Horizontal"
