--- a/MiSTer_SAM.ini
+++ b/MiSTer_SAM.ini
@@ -9,10 +9,10 @@
 
 # Time before Super Attract Mode starts in seconds
 # 300 = 5 minutes, 600 = 10 minutes, 900 = 15 minutes
-samtimeout=20
+samtimeout=300
 
 # Time before going to the next core in seconds
-gamegametimer=15
+gametimer=120
 
 # Start SAM only from MiSTer main menu
 menuonly="No"
@@ -30,15 +30,15 @@ corelist="arcade,gba,genesis,megacd,neogeo,nes,snes,tgfx16,tgfx16cd"
 # ======== GAME PATHS ========
 # Customize the path to ROMs for each core here
 # If you want to use usb0 or a different directory - this is for you!
-#arcadepath="/media/fat/_arcade"
-#gbapath="/media/fat/games/GBA"
-#genesispath="/media/fat/games/Genesis"
-#megacdpath="/media/fat/games/MegaCD"
-#neogeopath="/media/fat/games/NeoGeo"
-#nespath="/media/fat/games/NES"
-#snespath="/media/fat/games/SNES"
-#tgfx16path="/media/fat/games/TGFX16"
-#tgfx16cdpath="/media/fat/games/TGFX16-CD"
+arcadepath="/media/fat/_arcade"
+gbapath="/media/fat/games/GBA"
+genesispath="/media/fat/games/Genesis"
+megacdpath="/media/fat/games/MegaCD"
+neogeopath="/media/fat/games/NeoGeo"
+nespath="/media/fat/games/NES"
+snespath="/media/fat/games/SNES"
+tgfx16path="/media/fat/games/TGFX16"
+tgfx16cdpath="/media/fat/games/TGFX16-CD"
 
 
 # ======== CONSOLE OPTIONS ========
@@ -49,12 +49,13 @@ ignorezip="No"
 disablebootrom="Yes"
 
 # ======== ARCADE OPTIONS ========
-#mrapath="/media/fat/_Arcade"
+mrapath="/media/fat/_Arcade"
 
 # Which games you want to display? - Set it to Horizontal, Vertical or All
 orientation=All
 
-# List of MRAs. If no list is found, the script will create a new list on startup
+# List of MRAs
+# If no list is found, the script will create a temporary list on startup of all MRAs
 #mralist="/media/fat/Scripts/MiSTer_SAM_mras.txt"
 
 # Excluded MRAs - Arcade games you don't want to show
@@ -65,14 +66,14 @@ Another Bad Game.mra
 
 # ======== OTHER ========
 # Path to tools. Change if you have another copy installed and want to reuse.
-#mbcpath="/media/fat/Scripts/.MiSTer_SAM/mbc"
-#partunpath="/media/fat/Scripts/.MiSTer_SAM/partun"
+mbcpath="/media/fat/Scripts/.MiSTer_SAM/mbc"
+partunpath="/media/fat/Scripts/.MiSTer_SAM/partun"
 
 # This will probably break things if you try to adjust the following settings
-#mrsampath="/media/fat/Scripts/.MiSTer_SAM"
-#misterpath="/media/fat"
+mrsampath="/media/fat/Scripts/.MiSTer_SAM"
+misterpath="/media/fat"
 
 # The following two Directories are for your horizontal and vertical Arcade games - requires Arcade Organizer Script
 # You can also set the vertical Games to "_Vertical CCW 90 Deg" for Games that are rotated Counter Clockwise
-#mrapathvert="/media/fat/_Arcade/_Organized/_6 Rotation/_Vertical CW 90 Deg" 
-#mrapathhoriz="/media/fat/_Arcade/_Organized/_6 Rotation/_Horizontal"
+mrapathvert="/media/fat/_Arcade/_Organized/_6 Rotation/_Vertical CW 90 Deg" 
+mrapathhoriz="/media/fat/_Arcade/_Organized/_6 Rotation/_Horizontal"
