--- a/MiSTer_SAM.ini
+++ b/MiSTer_SAM.ini
@@ -15,13 +15,22 @@ samtimeout=300
 gametimer=120
 
 # Start SAM only from MiSTer main menu
-menuonly="No"
+menuonly="Yes"
 
-# Interrupt attract mode on input
+# Listen to device types for activity detection and interrupts
 # SAM tries to listen for controller buttons, controller d-pad movement, mouse movement, mouse buttons, and keyboard input
 # SAM attempts to detect newly added controllers and mice for monitoring
 # Not all devices appear to Linux - notably BlisSTer controllers in LLAPI mode and SNAC devices	
-saminterrupt="Yes"
+
+# Listen to the mouse
+listenmouse="Yes"
+
+# Listen to the keyboard - probably a good idea
+listenkeyboard="Yes"
+
+# Listen to the joystick/controller - probaby a good idea
+listenjoy="Yes"
+
 
 # Which systems would you like to display in Attract Mode? 
 # Valid options: arcade gba genesis megacd neogeo nes snes tgfx16 tgfx16cd
@@ -42,8 +51,8 @@ tgfx16cdpath="/media/fat/games/TGFX16-CD"
 
 
 # ======== CONSOLE OPTIONS ========
-# If you don't want Attract Mode to use the ZIP files in your game directories for some reason set this to "Yes"
-ignorezip="No"
+# Use the ZIP files in your game directories
+usezip="Yes"
 
 # Disable bootroms directory so your default games don't boot during Attract Mode cycles 
 disablebootrom="Yes"
