--- a/MiSTer_SAM.ini
+++ b/MiSTer_SAM.ini
@@ -17,37 +17,9 @@ gametimer=120
 # Start SAM only from MiSTer main menu
 menuonly="Yes"
 
-# Listen to device types for activity detection and interrupts
-# SAM tries to listen for controller buttons, controller d-pad movement, mouse movement, mouse buttons, and keyboard input
-# SAM attempts to detect newly added controllers and mice for monitoring
-# Not all devices appear to Linux - notably BlisSTer controllers in LLAPI mode and SNAC devices	
-
-# Listen to the mouse
-listenmouse="Yes"
-
-# Listen to the keyboard - probably a good idea
-listenkeyboard="Yes"
-
-# Listen to the joystick/controller - probaby a good idea
-listenjoy="Yes"
-
-
 # Which systems would you like to display in Attract Mode? 
 # Valid options: arcade gba genesis megacd neogeo nes snes tgfx16 tgfx16cd
 corelist="arcade,gba,genesis,megacd,neogeo,nes,snes,tgfx16,tgfx16cd"
-
-# ======== GAME PATHS ========
-# Customize the path to ROMs for each core here
-# If you want to use usb0 or a different directory - this is for you!
-arcadepath="/media/fat/_arcade"
-gbapath="/media/fat/games/GBA"
-genesispath="/media/fat/games/Genesis"
-megacdpath="/media/fat/games/MegaCD"
-neogeopath="/media/fat/games/NeoGeo"
-nespath="/media/fat/games/NES"
-snespath="/media/fat/games/SNES"
-tgfx16path="/media/fat/games/TGFX16"
-tgfx16cdpath="/media/fat/games/TGFX16-CD"
 
 
 # ======== CONSOLE OPTIONS ========
@@ -57,14 +29,16 @@ usezip="Yes"
 # Disable bootroms directory so your default games don't boot during Attract Mode cycles 
 disablebootrom="Yes"
 
+
 # ======== ARCADE OPTIONS ========
 mrapath="/media/fat/_Arcade"
 
 # Which games you want to display? - Set it to Horizontal, Vertical or All
 orientation=All
 
-# List of MRAs
-# If no list is found, the script will create a temporary list on startup of all MRAs
+# Custom List of Arcade MRA Files
+# You can specify a list of Arcade Games you would like to display
+# Or exclude Games instead in the next setting
 #mralist="/media/fat/Scripts/MiSTer_SAM_mras.txt"
 
 # Excluded MRAs - Arcade games you don't want to show
@@ -73,7 +47,18 @@ Example Bad Game.mra
 Another Bad Game.mra
 "
 
-# ======== OTHER ========
+# ======== ADVANCED (HANDLE WITH CARE) ========
+
+# When you push a button or move the mouse, interrupt SAM
+
+# SAM tries to listen for controller buttons, controller d-pad movement, mouse movement, mouse buttons, and keyboard input
+# SAM attempts to detect newly added controllers and mice for monitoring
+# Note: Not all devices appear to Linux - notably BlisSTer controllers in LLAPI mode and SNAC devices	
+
+listenmouse="Yes"
+listenkeyboard="Yes"
+listenjoy="Yes"
+
 # Path to tools. Change if you have another copy installed and want to reuse.
 mbcpath="/media/fat/Scripts/.MiSTer_SAM/mbc"
 partunpath="/media/fat/Scripts/.MiSTer_SAM/partun"
@@ -86,3 +71,15 @@ misterpath="/media/fat"
 # You can also set the vertical Games to "_Vertical CCW 90 Deg" for Games that are rotated Counter Clockwise
 mrapathvert="/media/fat/_Arcade/_Organized/_6 Rotation/_Vertical CW 90 Deg" 
 mrapathhoriz="/media/fat/_Arcade/_Organized/_6 Rotation/_Horizontal"
+
+# ======== GAME PATHS ========
+# Game path customization is for future releases. Currently only /media/fat/games folder is supported
+arcadepath="/media/fat/_arcade"
+gbapath="/media/fat/games/GBA"
+genesispath="/media/fat/games/Genesis"
+megacdpath="/media/fat/games/MegaCD"
+neogeopath="/media/fat/games/NeoGeo"
+nespath="/media/fat/games/NES"
+snespath="/media/fat/games/SNES"
+tgfx16path="/media/fat/games/TGFX16"
+tgfx16cdpath="/media/fat/games/TGFX16-CD"
