--- a/MiSTer_SAM.ini
+++ b/MiSTer_SAM.ini
@@ -62,7 +62,7 @@ mbcpath="/media/fat/Scripts/.cache/MiSTer_SAM/mbc"
 partunpath="/media/fat/Scripts/.cache/MiSTer_SAM/partun"
 
 # This will probably break things if you try to adjust the following settings
-mrsampath="/media/fat/Scripts/.cache/MiSTer_SAM"
+mrsampath="/media/fat/Scripts/.MiSTer_SAM"
 misterpath="/media/fat"
 
 # The following two Directories are for your horizontal and vertical Arcade games - requires Arcade Organizer Script
