--- a/MiSTer_SAM.ini
+++ b/MiSTer_SAM.ini
@@ -81,3 +81,29 @@ nespath="/media/fat/games/NES"
 snespath="/media/fat/games/SNES"
 tgfx16path="/media/fat/games/TGFX16"
 tgfx16cdpath="/media/fat/games/TGFX16-CD"
+
+# ======== DEBUG ========
+# These are intended for debugging SAM - use with care!
+
+# Use newer python-based joystick / controller detection
+#usepyjoy="No"
+
+# Will SAM MCP wait 60 seconds before checking for activity
+# Used to overcome startup clock issues
+#startupsleep="No"
+
+# Should SAM be quiet - disable for extra logging - only useful via ssh
+#samquiet="No"
+
+# GitHub branch to download updates from
+# Valid choices are: "main" or "test"
+#branch="test"
+
+# Should MiSTer_SAM_on reboot at the end of installation
+# Recommended to ensure MiSTer is in a good state
+#doreboot="No"
+
+# Should MiSTer_SAM_on use normal "reboot" command or "reboot -f" at the end of installation
+# Should NOT be necessary to use "reboot -f"
+# Only used if doreboot=yes
+#normalreboot="No"
