--- a/MiSTer_SAM.ini
+++ b/MiSTer_SAM.ini
@@ -39,14 +39,66 @@ orientation=All
 # Or exclude Games instead in the next setting
 #mralist="/media/fat/Scripts/MiSTer_SAM_mras.txt"
 
-# Excluded MRAs - Arcade games you don't want to show
-mraexclude="
-Example Bad Game.mra
-Another Bad Game.mra
+#======== EXCLUDE LISTS ========
+# One game per line
+# Trailing quote is required!
+
+arcadeexclude="
+First Bad Game.mra
+Second Bad Game.mra
+Third Bad Game.mra
 "
 
-# ======== ADVANCED (HANDLE WITH CARE) ========
+gbaexclude="
+First Bad Game.gba
+Second Bad Game.gba
+Third Bad Game.gba
+"
 
+genesisexclude="
+First Bad Game.gen
+Second Bad Game.gen
+Third Bad Game.gen
+"
+
+megacdexclude="
+First Bad Game.chd
+Second Bad Game.chd
+Third Bad Game.chd
+"
+
+neogeoexclude="
+First Bad Game.neo
+Second Bad Game.neo
+Third Bad Game.neo
+"
+
+nesexclude="
+First Bad Game.nes
+Second Bad Game.nes
+Third Bad Game.nes
+"
+
+snesexclude="
+First Bad Game.sfc
+Second Bad Game.sfc
+Third Bad Game.sfc
+"
+
+tgfx16exclude="
+First Bad Game.pce
+Second Bad Game.pce
+Third Bad Game.pce
+"
+
+tgfx16cdexclude="
+First Bad Game.chd
+Second Bad Game.chd
+Third Bad Game.chd
+"
+
+
+# ======== ADVANCED (HANDLE WITH CARE) ========
 # When you push a button or move the mouse, interrupt SAM
 
 # SAM tries to listen for controller buttons, controller d-pad movement, mouse movement, mouse buttons, and keyboard input
