--- a/MiSTer_SAM.ini
+++ b/MiSTer_SAM.ini
@@ -110,11 +110,11 @@ listenkeyboard="Yes"
 listenjoy="Yes"
 
 # Path to tools. Change if you have another copy installed and want to reuse.
-mbcpath="/media/fat/Scripts/.MiSTer_SAM/mbc"
-partunpath="/media/fat/Scripts/.MiSTer_SAM/partun"
+mbcpath="/media/fat/Scripts/MiSTer_SAM/mbc"
+partunpath="/media/fat/Scripts/MiSTer_SAM/partun"
 
 # This will probably break things if you try to adjust the following settings
-mrsampath="/media/fat/Scripts/.MiSTer_SAM"
+mrsampath="/media/fat/Scripts/MiSTer_SAM"
 misterpath="/media/fat"
 
 # The following two Directories are for your horizontal and vertical Arcade games - requires Arcade Organizer Script
