--- a/MiSTer_SAM.ini
+++ b/MiSTer_SAM.ini
@@ -83,9 +83,9 @@ Third Bad Game.chd"
 # ======== ADVANCED (HANDLE WITH CARE) ========
 # When you push a button or move the mouse, interrupt SAM
 
-# SAM tries to listen for controller buttons, controller d-pad movement, mouse movement, mouse buttons, and keyboard input
+# SAM tries to listen for controller buttons, mouse movement, mouse buttons, and keyboard input
 # SAM attempts to detect newly added controllers and mice for monitoring
-# Note: Not all devices appear to Linux - notably BlisSTer controllers in LLAPI mode and SNAC devices	
+# Note: Not all devices will be recognized - notably BlisSTer controllers in LLAPI mode and SNAC devices	
 
 listenmouse="Yes"
 listenkeyboard="Yes"
