--- a/MiSTer_SAM.ini
+++ b/MiSTer_SAM.ini
@@ -37,7 +37,7 @@ orientation=All
 # Custom List of Arcade MRA Files
 # You can specify a list of Arcade Games you would like to display
 # Or exclude Games instead in the next setting
-#mralist="/media/fat/Scripts/MiSTer_SAM_mras.txt"
+#mralist="/media/fat/Scripts/.MiSTer_SAM_mras.txt"
 
 #======== EXCLUDE LISTS ========
 # One game per line
@@ -92,11 +92,11 @@ listenkeyboard="Yes"
 listenjoy="Yes"
 
 # Path to tools. Change if you have another copy installed and want to reuse.
-mbcpath="/media/fat/Scripts/MiSTer_SAM/mbc"
-partunpath="/media/fat/Scripts/MiSTer_SAM/partun"
+mbcpath="/media/fat/Scripts/.MiSTer_SAM/mbc"
+partunpath="/media/fat/Scripts/.MiSTer_SAM/partun"
 
 # This will probably break things if you try to adjust the following settings
-mrsampath="/media/fat/Scripts/MiSTer_SAM"
+mrsampath="/media/fat/Scripts/.MiSTer_SAM"
 misterpath="/media/fat"
 
 # The following two Directories are for your horizontal and vertical Arcade games - requires Arcade Organizer Script
@@ -119,9 +119,6 @@ tgfx16cdpath="/media/fat/games/TGFX16-CD"
 # ======== DEBUG ========
 # These are intended for debugging SAM - use with care!
 
-# Use newer python-based joystick / controller detection
-#usepyjoy="No"
-
 # Will SAM MCP wait 60 seconds before checking for activity
 # Used to overcome startup clock issues
 #startupsleep="No"
@@ -132,12 +129,3 @@ tgfx16cdpath="/media/fat/games/TGFX16-CD"
 # GitHub branch to download updates from
 # Valid choices are: "main" or "test"
 #branch="test"
-
-# Should MiSTer_SAM_on reboot at the end of installation
-# Recommended to ensure MiSTer is in a good state
-#doreboot="No"
-
-# Should MiSTer_SAM_on use normal "reboot" command or "reboot -f" at the end of installation
-# Should NOT be necessary to use "reboot -f"
-# Only used if doreboot=yes
-#normalreboot="No"
