--- a/MiSTer_SAM.ini
+++ b/MiSTer_SAM.ini
@@ -31,8 +31,6 @@ disablebootrom="Yes"
 
 
 # ======== ARCADE OPTIONS ========
-mrapath="/media/fat/_Arcade"
-
 # Which games you want to display? - Set it to Horizontal, Vertical or All
 orientation=All
 
@@ -41,19 +39,53 @@ orientation=All
 # Or exclude Games instead in the next setting
 #mralist="/media/fat/Scripts/MiSTer_SAM_mras.txt"
 
-# Excluded MRAs - Arcade games you don't want to show
-mraexclude="
-Example Bad Game.mra
-Another Bad Game.mra
-"
+#======== EXCLUDE LISTS ========
+# One game per line
+# Trailing quote is required!
+
+arcadeexclude="First Bad Game.mra
+Second Bad Game.mra
+Third Bad Game.mra"
+
+gbaexclude="First Bad Game.gba
+Second Bad Game.gba
+Third Bad Game.gba"
+
+genesisexclude="First Bad Game.gen
+Second Bad Game.gen
+Third Bad Game.gen"
+
+megacdexclude="First Bad Game.chd
+Second Bad Game.chd
+Third Bad Game.chd"
+
+neogeoexclude="First Bad Game.neo
+Second Bad Game.neo
+Third Bad Game.neo"
+
+nesexclude="First Bad Game.nes
+Second Bad Game.nes
+Third Bad Game.nes"
+
+snesexclude="First Bad Game.sfc
+Second Bad Game.sfc
+Third Bad Game.sfc"
+
+tgfx16exclude="First Bad Game.pce
+Second Bad Game.pce
+Third Bad Game.pce"
+
+tgfx16cdexclude="First Bad Game.chd
+Second Bad Game.chd
+Third Bad Game.chd"
+
 
 # ======== ADVANCED (HANDLE WITH CARE) ========
-
 # When you push a button or move the mouse, interrupt SAM
 
-# SAM tries to listen for controller buttons, controller d-pad movement, mouse movement, mouse buttons, and keyboard input
+# SAM tries to listen for controller buttons, mouse movement, mouse buttons, and keyboard input
 # SAM attempts to detect newly added controllers and mice for monitoring
-# Note: Not all devices appear to Linux - notably BlisSTer controllers in LLAPI mode and SNAC devices	
+# Note: Not all devices will be recognized - notably BlisSTer controllers in LLAPI mode and SNAC devices	
 
 listenmouse="Yes"
 listenkeyboard="Yes"
@@ -83,3 +115,17 @@ nespath="/media/fat/games/NES"
 snespath="/media/fat/games/SNES"
 tgfx16path="/media/fat/games/TGFX16"
 tgfx16cdpath="/media/fat/games/TGFX16-CD"
+
+# ======== DEBUG ========
+# These are intended for debugging SAM - use with care!
+
+# Will SAM MCP wait 60 seconds before checking for activity
+# Used to overcome startup clock issues
+#startupsleep="No"
+
+# Should SAM be quiet - disable for extra logging - only useful via ssh
+#samquiet="No"
+
+# GitHub branch to download updates from
+# Valid choices are: "main" or "test"
+#branch="test"
