--- a/MiSTer_SAM.ini
+++ b/MiSTer_SAM.ini
@@ -79,6 +79,10 @@ tgfx16cdexclude="First Bad Game.chd
 Second Bad Game.chd
 Third Bad Game.chd"
 
+# FOLDER EXCLUSION
+# Certain folder you would like to exlude, like NSF of VGM. You don't need to include the full path name. 
+
+folderexclude=( vgm eu nsf other nes2pce fds spc unsupported )
 
 # ======== ADVANCED (HANDLE WITH CARE) ========
 # When you push a button or move the mouse, interrupt SAM
