--- a/MiSTer_SAM.ini
+++ b/MiSTer_SAM.ini
@@ -80,7 +80,7 @@ Second Bad Game.chd
 Third Bad Game.chd"
 
 # FOLDER EXCLUSION
-# Certain folder you would like to exlude, like NSF of VGM. You don't need to include the full path name. 
+# Any kind of folders you would like to exlude, like NSF of VGM. You don't need to include the full path name, partial names with case insensitive spelling is enough. 
 
 folderexclude=( vgm eu nsf other nes2pce fds spc unsupported )
 
