--- a/MiSTer_SAM.ini
+++ b/MiSTer_SAM.ini
@@ -109,7 +109,7 @@ mrapathvert="/media/fat/_Arcade/_Organized/_6 Rotation/_Vertical CW 90 Deg"
 mrapathhoriz="/media/fat/_Arcade/_Organized/_6 Rotation/_Horizontal"
 
 # ======== GAME PATHS ========
-# Game path customization is for future releases. Currently only /media/fat/games folder is supported
+# Game path customization. Useful if you only want to show certain games in your collection or use alternative media storage like `/media/usb0`
 arcadepath="/media/fat/_arcade"
 gbapath="/media/fat/games/GBA"
 genesispath="/media/fat/games/Genesis"
