--- a/MiSTer_SAM.ini
+++ b/MiSTer_SAM.ini
@@ -80,7 +80,8 @@ Second Bad Game.chd
 Third Bad Game.chd"
 
 # FOLDER EXCLUSION
-# Folders you would like to exlude, like NSF (Audio files for NES) for example. You don't need to include the full path name, partial names with case insensitive spelling will suffice. 
+# Folders you would like to exlude, like NSF (Audio files for NES) for example. You don't need to include the full path name.
+# Partial names with case insensitive spelling will suffice. 
 
 folderexclude=( vgm eu nsf other nes2pce fds spc unsupported )
 
