--- a/MiSTer_SAM.ini
+++ b/MiSTer_SAM.ini
@@ -90,7 +90,7 @@ folderexclude=( vgm eu nsf other nes2pce fds spc unsupported )
 
 # SAM tries to listen for controller buttons, mouse movement, mouse buttons, and keyboard input
 # SAM attempts to detect newly added controllers and mice for monitoring
-# Note: Not all devices will be recognized - notably BlisSTer controllers in LLAPI mode, BT controllers and SNAC devices	
+# Note: Not all devices will be recognized - notably BlisSTer controllers in LLAPI mode and SNAC devices	
 
 listenmouse="Yes"
 listenkeyboard="Yes"
