Add optional support for tty2oled output
Improved routine to terminate processes to not kill all instances of inotifywait - prevents impacting tty2oled and possibly others

--- a/MiSTer_SAM.ini
+++ b/MiSTer_SAM.ini
@@ -116,6 +116,12 @@ snespath="/media/fat/games/SNES"
 tgfx16path="/media/fat/games/TGFX16"
 tgfx16cdpath="/media/fat/games/TGFX16-CD"
 
+# ======== TTY2OLED =======
+# Options for https://github.com/venice1200/MiSTer_tty2oled
+# usetty="Yes" shows the text name of the game being played - NOT the standard core name graphic
+ttyenable="No"
+ttydevice="/dev/ttyUSB0"
+
 # ======== DEBUG ========
 # These are intended for debugging SAM - use with care!
 
