--- a/Presets/mrchrisster-MiSTer_SAM.ini
+++ b/Presets/mrchrisster-MiSTer_SAM.ini
@@ -31,9 +31,6 @@ disablebootrom="Yes"
 
 
 # ======== ARCADE OPTIONS ========
-# Which games you want to display? - Set it to Horizontal, Vertical or All
-orientation=Horizontal
-
 # Custom List of Arcade MRA Files
 # You can specify a list of Arcade Games you would like to display
 # Or exclude Games instead in the next setting
@@ -267,8 +264,15 @@ mrapathvert="/media/fat/_Arcade/_Organized/_6 Rotation/_Vertical CW 90 Deg"
 mrapathhoriz="/media/fat/_Arcade/_Organized/_6 Rotation/_Horizontal"
 
 # ======== GAME PATHS ========
-# Game path customization is for future releases. Currently only /media/fat/games folder is supported
-arcadepath="/media/fat/_arcade"
+# Game path customization. Useful if you only want to show certain games in your collection or use alternative media storage like `/media/usb0`
+
+# Default - all arcade games
+# arcadepath="/media/fat/_arcade"
+# Uncomment below to use only rotated games
+#arcadepath="/media/fat/_Arcade/_Organized/_6 Rotation/_Vertical CW 90 Deg" 
+#arcadepath="/media/fat/_Arcade/_Organized/_6 Rotation/_Vertical CCW 90 Deg" 
+arcadepath="/media/fat/_Arcade/_Organized/_6 Rotation/_Horizontal"
+
 gbapath="/media/fat/games/GBA"
 genesispath="/media/fat/games/Genesis"
 megacdpath="/media/fat/games/MegaCD"
@@ -277,6 +281,12 @@ nespath="/media/fat/games/NES"
 snespath="/media/fat/games/SNES"
 tgfx16path="/media/fat/games/TGFX16"
 tgfx16cdpath="/media/fat/games/TGFX16-CD"
+
+# ======== TTY2OLED =======
+# Options for https://github.com/venice1200/MiSTer_tty2oled
+# usetty="Yes" shows the text name of the game being played - NOT the standard core name graphic
+ttyenable="No"
+ttydevice="/dev/ttyUSB0"
 
 # ======== DEBUG ========
 # These are intended for debugging SAM - use with care!
@@ -287,6 +297,8 @@ tgfx16cdpath="/media/fat/games/TGFX16-CD"
 
 # Should SAM be quiet - disable for extra logging - only useful via ssh
 #samquiet="No"
+#samdebug="Yes"
+#samtrace="Yes"
 
 # GitHub branch to download updates from
 # Valid choices are: "main" or "test"
