updated arcade path
to latest arcade organizer folder location

--- a/MiSTer_SAM.ini
+++ b/MiSTer_SAM.ini
@@ -103,8 +103,9 @@ misterpath="/media/fat"
 # Default - all arcade games
 arcadepath="/media/fat/_arcade"
 # Uncomment below to use only rotated games
-#arcadepath="/media/fat/_Arcade/_Organized/_4 Video & Inputs/_2 Rotation/_Vertical CW 90 Deg" 
-#arcadepath="/media/fat/_Arcade/_Organized/_4 Video & Inputs/_2 Rotation/_Vertical CCW 90 Deg" 
+#arcadepath="/media/fat/_Arcade/_Organized/_4 Video & Inputs/_2 Rotation/_Vertical (CW)" 
+#arcadepath="/media/fat/_Arcade/_Organized/_4 Video & Inputs/_2 Rotation/_Vertical (CCW)" 
+#arcadepath="/media/fat/_Arcade/_Organized/_4 Video & Inputs/_2 Rotation/_Horizontal (180)" 
 #arcadepath="/media/fat/_Arcade/_Organized/_4 Video & Inputs/_2 Rotation/_Horizontal"
 
 gbapath="/media/fat/games/GBA"
