Add optional console game whitelists.
Also made SAM repository URL configurable in the ini file.

--- a/MiSTer_SAM.ini
+++ b/MiSTer_SAM.ini
@@ -29,13 +29,24 @@ usezip="Yes"
 # Disable bootroms directory so your default games don't boot during Attract Mode cycles 
 disablebootrom="Yes"
 
+# Custom List of Console ROM Files
+# You can specify a list of console games you would like to display
+# by creating the files below; missing files are ignored.
+# Each file should have one game per line and use Unix-style line endings.
+gbawhitelist="/media/fat/Scripts/MiSTer_SAM_whitelist_gba.txt"
+genesiswhitelist="/media/fat/Scripts/MiSTer_SAM_whitelist_genesis.txt"
+megacdwhitelist="/media/fat/Scripts/MiSTer_SAM_whitelist_megacd.txt"
+neogeowhitelist="/media/fat/Scripts/MiSTer_SAM_whitelist_neogeo.txt"
+neswhitelist="/media/fat/Scripts/MiSTer_SAM_whitelist_nes.txt"
+sneswhitelist="/media/fat/Scripts/MiSTer_SAM_whitelist_snes.txt"
+tgfx16whitelist="/media/fat/Scripts/MiSTer_SAM_whitelist_tgfx16.txt"
+tgfx16cdwhitelist="/media/fat/Scripts/MiSTer_SAM_whitelist_tgfx16cd.txt"
 
 # ======== ARCADE OPTIONS ========
 # Custom List of Arcade MRA Files
 # You can specify a list of Arcade Games you would like to display
 # Or exclude Games instead in the next setting
 #mralist="/media/fat/Scripts/MiSTer_SAM_mras.txt"
-
 
 #======== EXCLUDE LISTS ========
 # One game per line
@@ -134,6 +145,10 @@ ttydevice="/dev/ttyUSB0"
 #samquiet="No"
 #samdebug="Yes"
 #samtrace="Yes"
+
+# GitHub repository to download updates from
+# Change this to use your own fork
+#repository_url="https://github.com/mrchrisster/MiSTer_SAM"
 
 # GitHub branch to download updates from
 # Valid choices are: "main" or "test"
