Apply whitelist during find command for better performance.
The previous approach spent too much time on retries if the whitelist
is small relative to the number of possible files.

--- a/MiSTer_SAM.ini
+++ b/MiSTer_SAM.ini
@@ -29,10 +29,11 @@ usezip="Yes"
 # Disable bootroms directory so your default games don't boot during Attract Mode cycles 
 disablebootrom="Yes"
 
-# Custom List of Console ROM Files
+# ======== CONSOLE WHITELISTS ========
 # You can specify a list of console games you would like to display
-# by creating the files below; missing files are ignored.
+# by creating the files below; missing or empty files are ignored.
 # Each file should have one game per line and use Unix-style line endings.
+# Game names are not case-sensitive.
 gbawhitelist="/media/fat/Scripts/MiSTer_SAM_whitelist_gba.txt"
 genesiswhitelist="/media/fat/Scripts/MiSTer_SAM_whitelist_genesis.txt"
 megacdwhitelist="/media/fat/Scripts/MiSTer_SAM_whitelist_megacd.txt"
