added psx, don't need to disable bootroms anymore

--- a/MiSTer_SAM.ini
+++ b/MiSTer_SAM.ini
@@ -19,15 +19,12 @@ menuonly="Yes"
 
 # Which systems would you like to display in Attract Mode? 
 # Valid options: arcade gba genesis megacd neogeo nes snes tgfx16 tgfx16cd
-corelist="arcade,gba,genesis,megacd,neogeo,nes,snes,tgfx16,tgfx16cd"
+corelist="arcade,gba,genesis,megacd,neogeo,nes,snes,tgfx16,tgfx16cd,psx"
 
 
 # ======== CONSOLE OPTIONS ========
 # Use the ZIP files in your game directories
 usezip="Yes"
-
-# Disable bootroms directory so your default games don't boot during Attract Mode cycles 
-disablebootrom="Yes"
 
 
 # ======== ARCADE OPTIONS ========
