--- a/MiSTer_SAM.ini
+++ b/MiSTer_SAM.ini
@@ -9,7 +9,7 @@
 
 # Time before Super Attract Mode starts in seconds
 # 300 = 5 minutes, 600 = 10 minutes, 900 = 15 minutes
-samtimeout=60
+samtimeout=20
 
 # Time before going to the next core in seconds
 gametimer=120
@@ -18,8 +18,8 @@ gametimer=120
 menuonly="Yes"
 
 # Which systems would you like to display in Attract Mode? 
-# Valid options: arcade gba genesis megacd neogeo nes snes tgfx16 tgfx16cd
-corelist="arcade,gba,genesis,megacd,neogeo,nes,snes,tgfx16,tgfx16cd,psx"
+# Valid options: arcade gba genesis megacd neogeo nes snes tgfx16 tgfx16cd (not working with mgl) psx
+corelist="arcade,gba,genesis,megacd,neogeo,nes,snes,tgfx16,psx"
 
 
 # ======== CONSOLE OPTIONS ========
