--- a/MiSTer_SAM.ini
+++ b/MiSTer_SAM.ini
@@ -7,7 +7,7 @@
 
 # ======== GENERAL OPTIONS ========
 
-# Time before Super Attract Mode starts in seconds
+# Time before Super Attract Mode starts in seconds. On reboot it will wait an additional minute for all services to load up. So SAM comes on at 60s + samtimeout
 # 300 = 5 minutes, 600 = 10 minutes, 900 = 15 minutes
 samtimeout=20
 
