psx and mgl changes reflected

--- a/MiSTer_SAM.ini
+++ b/MiSTer_SAM.ini
@@ -3,7 +3,7 @@
 
 # For Console cores make sure you are using the recommended folder structure: /media/fat/Games/SNES/ etc.
 # The script supports zipped Everdrive packs or unzipped folders.
-# For MegaCD and Turbografx16 CD your games need to be in CHD format.
+# For PSX, MegaCD and Turbografx16 CD your games need to be in CHD format.
 
 # ======== GENERAL OPTIONS ========
 
@@ -26,15 +26,6 @@ corelist="arcade,gba,genesis,megacd,neogeo,nes,snes,tgfx16,psx"
 # Use the ZIP files in your game directories
 usezip="Yes"
 
-
-# ======== ARCADE OPTIONS ========
-# Which games you want to display? - Set it to Horizontal, Vertical or All
-orientation=All
-
-# Custom List of Arcade MRA Files
-# You can specify a list of Arcade Games you would like to display
-# Or exclude Games instead in the next setting
-#mralist="/media/fat/Scripts/MiSTer_SAM_mras.txt"
 
 #======== EXCLUDE LISTS ========
 # One game per line
@@ -107,6 +98,12 @@ mrapathvert="/media/fat/_Arcade/_Organized/_6 Rotation/_Vertical CW 90 Deg"
 mrapathhoriz="/media/fat/_Arcade/_Organized/_6 Rotation/_Horizontal"
 
 # ======== GAME PATHS ========
+
+# Default - all arcade games
+# arcadepath="/media/fat/_arcade"
+# Uncomment below to use only rotated games
+# arcadepath="/media/fat/_Arcade/_Organized/_4 Video & Inputs/_2 Rotation/_Horizontal"
+
 # Game path customization. Useful if you only want to show certain games in your collection or use alternative media storage like `/media/usb0`
 arcadepath="/media/fat/_arcade"
 gbapath="/media/fat/games/GBA"
