reflect recent changes, add psx and tgfx16cd

--- a/MiSTer_SAM.ini
+++ b/MiSTer_SAM.ini
@@ -19,12 +19,7 @@ menuonly="Yes"
 
 # Which systems would you like to display in Attract Mode? 
 # Valid options: arcade gba genesis megacd neogeo nes snes tgfx16 tgfx16cd (not working with mgl) psx
-corelist="arcade,gba,genesis,megacd,neogeo,nes,snes,tgfx16,psx"
-
-
-# ======== CONSOLE OPTIONS ========
-# Use the ZIP files in your game directories
-usezip="Yes"
+corelist="arcade,gba,genesis,megacd,neogeo,nes,snes,tgfx16,tgfx16cd,psx"
 
 
 #======== EXCLUDE LISTS ========
@@ -84,19 +79,6 @@ listenmouse="Yes"
 listenkeyboard="Yes"
 listenjoy="Yes"
 
-# Path to tools. Change if you have another copy installed and want to reuse.
-mbcpath="/media/fat/Scripts/.MiSTer_SAM/mbc"
-partunpath="/media/fat/Scripts/.MiSTer_SAM/partun"
-
-# This will probably break things if you try to adjust the following settings
-mrsampath="/media/fat/Scripts/.MiSTer_SAM"
-misterpath="/media/fat"
-
-# The following two Directories are for your horizontal and vertical Arcade games - requires Arcade Organizer Script
-# You can also set the vertical Games to "_Vertical CCW 90 Deg" for Games that are rotated Counter Clockwise
-mrapathvert="/media/fat/_Arcade/_Organized/_6 Rotation/_Vertical CW 90 Deg" 
-mrapathhoriz="/media/fat/_Arcade/_Organized/_6 Rotation/_Horizontal"
-
 # ======== GAME PATHS ========
 
 # Default - all arcade games
@@ -114,6 +96,11 @@ nespath="/media/fat/games/NES"
 snespath="/media/fat/games/SNES"
 tgfx16path="/media/fat/games/TGFX16"
 tgfx16cdpath="/media/fat/games/TGFX16-CD"
+psxpath="/media/fat/games/PSX"
+
+
+# Use the ZIP files in your game directories. It's best to leave it untouched.
+usezip="Yes"
 
 # ======== DEBUG ========
 # These are intended for debugging SAM - use with care!
