--- a/MiSTer_SAM.ini
+++ b/MiSTer_SAM.ini
@@ -95,6 +95,12 @@ tgfx16path="/media/fat/games/TGFX16"
 tgfx16cdpath="/media/fat/games/TGFX16-CD"
 psxpath="/media/fat/games/PSX"
 
+# ======== TTY2OLED =======
+# Options for https://github.com/venice1200/MiSTer_tty2oled
+# usetty="Yes" shows the text name of the game being played - NOT the standard core name graphic
+ttyenable="No"
+ttydevice="/dev/ttyUSB0"
+
 
 # Use the ZIP files in your game directories. It's best to leave it untouched.
 usezip="Yes"
